[gd_scene load_steps=10 format=3 uid="uid://b5iy5pcb2xit3"]

[ext_resource type="Script" path="res://Scenes/Paddle.gd" id="1_yyuuv"]
[ext_resource type="Texture2D" uid="uid://c5agg7oqbmhyc" path="res://Sprites/paddle.png" id="2_bxkmm"]
[ext_resource type="Texture2D" uid="uid://dc84gbscri7rr" path="res://Sprites/paddletop.png" id="3_tv01i"]
[ext_resource type="Texture2D" uid="uid://cuetvo4xbbywx" path="res://Sprites/paddlebottom.png" id="4_dejw6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_71oux"]
atlas = ExtResource("2_bxkmm")
region = Rect2(12, 0, 12, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8s4r"]
atlas = ExtResource("2_bxkmm")
region = Rect2(0, 0, 12, 108)

[sub_resource type="SpriteFrames" id="SpriteFrames_jtk3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71oux")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8s4r")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73suw"]
size = Vector2(16, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuvxx"]
size = Vector2(20, 128)

[node name="Paddle" type="CharacterBody2D" groups=["paddles"]]
script = ExtResource("1_yyuuv")

[node name="Paddle" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jtk3d")
animation = &"Hit"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -56)
texture = ExtResource("3_tv01i")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(0, 56)
texture = ExtResource("4_dejw6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_73suw")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-8, -64)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 64)
shape = SubResource("RectangleShape2D_kuvxx")

[node name="RecentHitTimer" type="Timer" parent="."]
wait_time = 0.022

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RecentHitTimer" to="." method="_on_recent_hit_timer_timeout"]
